@@ -1,3 +1,8 @@
+2005-01-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (discover):
+	Moved the IF-MIB discovery from checkdevtype() to discover()
+
 2005-01-06  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover/AxxessIT.pm: new discovery module
